# trajectory

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CLAUDE_DESIGN_PLAYBOOK.md  LICENSE  MIGRATION_PLAN.md  PROCESS.md  PROJECT_STRUCTURE.md  README.md  SCHEMAS.md  SUBMISSION.md  pyproject.toml  requirements.txt
.claude/: settings.json
.github/workflows/: refresh-gov-data.yml
demo/: README.md  package-lock.json  package.json  tsconfig.json
demo/src/: DemoVideo.tsx  Root.tsx
docs/: demo_script.md  demo_todos.md
docs/adr/: 0001-single-user-identity-seam.md
files/: 01-pre-submission-polish.md  02-managed-agents-company-investigator.md  03-jsonld-extractor.md  04-latex-cv-renderer.md  05-cv-tailor-agentic.md  06-skill-trajectory-new-subagent.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
scripts/: audit_prompt.py  fetch_gov_data.py  rebuild_embeddings.py  run_api.py  run_api.sh  run_web.sh  seed_career_entries.py  seed_demo_sessions.py  smoke_test.py
scripts/smoke_tests/: __init__.py  _common.py  api_boot.py  api_chat.py  api_onboarding.py  api_pack.py  api_profile.py  api_queue.py  api_sessions.py  bot_analyse_offer_text.py  bot_boot.py  bot_draft_cv_files.py  bot_read_intents.py  content_shield.py  cover_letter.py  cv_latex.py  cv_parser.py  cv_tailor_agentic.py  data_freshness.py  draft_reply.py  e2e_live_stress.py  faiss_retrieval.py  forward_journey_uk.py  forward_journey_visa_block.py  ghost_job.py  gov_data.py  (+38 more)
tests/: conftest.py  test_api_forward_job.py  test_api_forward_job_integration.py  test_api_health.py  test_api_onboarding.py  test_api_pack.py  test_api_queue.py  test_api_read_routes.py  test_citations.py  test_content_shield.py  test_cv_latex_compile.py  test_cv_latex_template_choice.py  test_cv_latex_writer.py  test_cv_tailor_agentic.py  test_ghost_job_combination.py  test_jsonld_extractor.py  test_managed_company_investigator.py  test_pii_scrubber.py  test_pre_migration_fixes.py  test_progress_emitter.py  test_shielded_fallback_verdict.py  test_story_bank_weighting.py  test_verdict_branching.py  test_verdict_ensemble.py
(+202 files in other folders)
